tests/ui/resolve/issue-102946.stderr
error[E0405]: cannot find trait `Error` in this scope
  --> $DIR/issue-102946.rs:1:6
   |
LL | impl Error for str::Utf8Error {
   |      ^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL + use std::error::Error;
   |

error[E0223]: ambiguous associated type
  --> $DIR/issue-102946.rs:1:16
   |
LL | impl Error for str::Utf8Error {
   |                ^^^^^^^^^^^^^^
   |
help: you are looking for the module in `std`, not the primitive type
   |
LL | impl Error for std::str::Utf8Error {
   |                +++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0223, E0405.
For more information about an error, try `rustc --explain E0223`.
